# sme-testbench

./: .gitignore  CMakeLists.txt  README.md
bench/: f32_pf_sweep.cpp  gemm_bench.cpp  gemm_bf16_bench.cpp  gemm_f16_bench.cpp  gemm_mt_bench.cpp  gemm_qd8_qb4w_bench.cpp  gemm_qd8_qc4w_bench.cpp  gemm_qd8_qc8w_bench.cpp  mopa_peak_bench.cpp  qd8_qc8w_2x2_bench.cpp  qd8_qc8w_pf_sweep.cpp  tile_2x2_bench.cpp
docs/: mopa_peak_m4max.md  mopa_peak_qualcomm.md
src/: gemm.cpp  gemm.h  gemm_bf16_2vlx2vl_sme.cpp  gemm_bf16_2vlx2vl_sme.h  gemm_bf16_4vlxvl_sme.cpp  gemm_bf16_4vlxvl_sme.h  gemm_bf16_sme.cpp  gemm_bf16_sme.h  gemm_f16_2vlx2vl_sme.cpp  gemm_f16_2vlx2vl_sme.h  gemm_f16_4vlxvl_sme.cpp  gemm_f16_4vlxvl_sme.h  gemm_f16_sme.cpp  gemm_f16_sme.h  gemm_f32_2vlx2vl_sme.cpp  gemm_f32_2vlx2vl_sme.h  gemm_f32_4vlxvl_sme.cpp  gemm_f32_4vlxvl_sme.h  gemm_f32_sme.cpp  gemm_f32_sme.h  gemm_qd8_qb4w2l_2vlx2vl_sme.cpp  gemm_qd8_qb4w2l_2vlx2vl_sme.h  gemm_qd8_qb4w2l_2vlxvl_sme.cpp  gemm_qd8_qb4w2l_2vlxvl_sme.h  gemm_qd8_qb4w_2vlx2vl_f16mopa.cpp  gemm_qd8_qb4w_2vlx2vl_f16mopa.h  gemm_qd8_qb4w_2vlx2vl_sme.cpp  gemm_qd8_qb4w_2vlx2vl_sme.h  gemm_qd8_qb4w_2vlxvl_sme.cpp  gemm_qd8_qb4w_2vlxvl_sme.h  gemm_qd8_qb4w_4vlxvl_sme.cpp  gemm_qd8_qb4w_4vlxvl_sme.h  gemm_qd8_qc4w_4vlxvl_sme.cpp  gemm_qd8_qc4w_4vlxvl_sme.h  gemm_qd8_qc8w_2vlx2vl_sme.cpp  gemm_qd8_qc8w_2vlx2vl_sme.h  gemm_qd8_qc8w_4vlxvl_sme.cpp  gemm_qd8_qc8w_4vlxvl_sme.h  gemm_qd8_qc8w_sme.cpp  gemm_qd8_qc8w_sme.h  (+3 more)
test/: gemm_bf16_test.cpp  gemm_f16_test.cpp  gemm_qd8_qb4w_test.cpp  gemm_qd8_qc4w_test.cpp  gemm_qd8_qc8w_test.cpp  gemm_test.cpp  pack_test.cpp
